--- a/index.html
+++ b/index.html
@@ -7,11 +7,76 @@
     <title>DokumentName</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+
+    <!-- Bootstrap Files -->
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
+
 </head>
 
-<body>
+<body onload="init()">
 
-    
+
+    <nav class="navbar bg-light">
+        <div class="container-fluid">
+            <span class="navbar-brand mb-0 h1">Quizapp</span>
+            <span class="navbar-brand mb-0 h1">More Apps</span>
+            <span class="navbar-brand mb-0 h1">Appstore</span>
+        </div>
+    </nav>
+    <div class="question">
+
+
+        <div class="card" style="width: 33rem;">
+            <img src="img/quiz-pic.jpg" class="card-img-top">
+            <div class="card-body">
+                <h5 class="card-title" id="head-question">Frage</h5>
+
+
+                <div class="card mb-2 answercard" onclick="answer('answer_1')">
+                    <div class="card-body" id="answer_1">
+                        Antwort
+                    </div>
+                </div>
+
+                <div class="card mb-2 answercard" onclick="answer('answer_2')">
+                    <div class="card-body" id="answer_2">
+                        Antwort
+                    </div>
+                </div>
+
+                <div class="card mb-2 answercard" onclick="answer('answer_3')">
+                    <div class="card-body" id="answer_3">
+                        Antwort
+                    </div>
+                </div>
+
+                <div class="card mb-2 answercard" onclick="answer('answer_4')">
+                    <div class="card-body" id="answer_4">
+                        Antwort
+                    </div>
+                </div>
+
+
+            </div>
+            <div class="card-footer">
+
+                <span>
+                    <b>1</b> von <b id="max-question">5</b> Fragen
+                </span>
+                <div>
+                    <button class="btn btn-primary">Nächste Frage</button>
+                </div>
+
+
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
